--- a/src/app/upload-excel/upload-excel.component.html
+++ b/src/app/upload-excel/upload-excel.component.html
@@ -4,7 +4,7 @@
     <p>Make Sure columns are exactly as shown below</p>
 
 </div>
-
+ 
 <!-- <div class="row"> -->
 <div class="container" style="text-align: center;">
     <img src="/assets/img/excel.jpg" alt="sample image" class="img-fluid" style="height: 250px; width: 800px;border: 2px solid #1d8b4e;">
@@ -14,7 +14,7 @@
         <button class="btn">Download Excel Template</button>
     </div>
 </div><br>
-
+<!-- git -->
 <div class="pull-right" style="margin:100px 200px 0px 0px;text-align: right;">
     <form>
         <!-- <mat-form-field>
