--- a/src/app/city/city.component.scss
+++ b/src/app/city/city.component.scss
@@ -3,7 +3,6 @@
   padding-bottom: 10px !important;
 }
 
-
 .asterisk_input:after {
 content: " *";
 color: #e32;
@@ -22,16 +21,26 @@ margin: 20px auto;
 margin:10px 10px;
 }
 button.btn.btn-default.bg-info.pull-right.m-3 {
-margin: -6px 0px !important;
-background: #1f467f !important;
-border-radius: 2.45rem !important;
-}
+  margin: -6px 0px !important;
+  background: #1d8b4e !important;
+  border-radius: 2.5rem !important;
+  border: 2px solid #1d8b4e;
+  }
+  button.btn.btn-default.bg-info.pull-right.m-3:hover{
+    background: white !important;
+    color: #1d8b4e;
+    
+  }
+  th,td{
+    font-family: 'Montserrat', sans-serif;
+
+  }
 // mat-icon.mat-icon.notranslate.material-icons.mat-icon-no-color {
 // padding: 0px 25px !important;
 // }
 td.mat-cell:first-of-type, td.mat-footer-cell:first-of-type, th.mat-header-cell:first-of-type {
-  padding-left: 86px;
-  width: 35%;
+  padding-left: 92px;
+  width: 36%;
 }
 a {
   margin: 0px 4px;
@@ -55,6 +64,12 @@ a {
   padding-left:10%;
   padding-left: 50px !important;
   widows: 36%;
+}
+}
+@media (min-width: 1280px) and (max-width:1365px) {
+  .card-title{
+    width: 129px !important;
+    margin-left: 3% !important;
 }
 }
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
