--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,4 +1,4 @@
-<div class="logo">
+<div class="logo side">
     <a href="/#/send-message" class="simple-text" style="margin:-20px 0px 0px 50px;">
         <div class="logo-img" >
             <img src="/assets/img/8-512.png" />
