--- a/src/app/auth/token-expired-dialog.html
+++ b/src/app/auth/token-expired-dialog.html
@@ -1,8 +1,8 @@
 <div mat-dialog-content>
-    <div class="row">
+    <div class="row" style="text-align: center;">
         <div class="col-md-12">
-                <h4> &nbsp; &nbsp; &nbsp; Your session has expired <br>
-                    &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;please login again</h4>
+                <h4> Your session has expired </h4>
+                    <h4>please login again</h4>
        </div>
     </div>
     <div class="row" style="justify-content: center;">
