--- a/src/app/city/city.component.html
+++ b/src/app/city/city.component.html
@@ -1,8 +1,8 @@
 <div class="main-content">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-10">
-                <div class="card">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <div class="card" style="margin-top: -30px;">
                     <div class="card-header card-header-primary">
                         <div class="row">
                             <div class="col-lg-12 col-md-6 ">
@@ -42,7 +42,7 @@
                             <th mat-header-cell *matHeaderCellDef class="card-container">Actions </th>
                             <td mat-cell *matCellDef="let row" class="card-container">
                                 <!-- <button mat-raised-button color="primary" (click)="edit_low(row)"> -->
-                                <a (click)="edit_low(row) " style="color:blue; cursor:pointer;">
+                                <a (click)="edit_low(row) " style="color:#1d8b4e; cursor:pointer;">
                                     <mat-icon aria-label="Edit">edit</mat-icon>
                                 </a>
                                 <!-- <a href="" (click)="edit_low(row)"> <mat-icon aria-label="Edit">edit</mat-icon></a> -->
@@ -60,7 +60,7 @@
                         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
                     </table>
-                    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" showFirstLastButtons></mat-paginator>
+                    <mat-paginator [pageSizeOptions]="[8, 15, 30, 100]" showFirstLastButtons></mat-paginator>
                 </div>
             </div>
         </div>
