--- a/src/app/city/delete-city-dialog.html
+++ b/src/app/city/delete-city-dialog.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title style="text-align:center;">Delete Sub Category</h1>
+<h1 mat-dialog-title style="text-align:center;">Delete State</h1>
 <div mat-dialog-content>
     
     <div class="row">
