--- a/src/app/portal-users/portal-users.component.html
+++ b/src/app/portal-users/portal-users.component.html
@@ -1,7 +1,7 @@
 <div class="main-content">
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-12">
+        <div class="row justify-content-center">
+            <div class="col-md-10">
                 <div class="card">
                     <div class="card-header card-header-primary">
                         <div class="row">
