--- a/src/app/state/state.component.html
+++ b/src/app/state/state.component.html
@@ -1,8 +1,8 @@
 <div class="main-content">
     <div class="container">
-        <div class="row">
+        <div class="row justify-content-center">
             <div class="col-md-8">
-                <div class="card" id="org">
+                <div class="card">
                     <div class="card-header card-header-primary">
                         <div class="row">
                             <div class="col-lg-12 col-md-6 ">
