--- a/src/app/forward-message/forward-delete.html
+++ b/src/app/forward-message/forward-delete.html
@@ -1,7 +1,7 @@
-<div mat-dialog-content id="sending">
-        <div class="h2">Deleted Successfully</div>
+<!-- <div mat-dialog-content id="sending">
+        <div class="h3">Deleted Successfully</div>
         <button class="btn btn-success" (click)="dialogRef.close()">OK</button>
-</div>
+</div> -->
 <!-- <h1 mat-dialog-title>Delete Request</h1>
 <div mat-dialog-content>
     <div class="row container">
@@ -17,3 +17,19 @@
         </div>
     </div>
 </div> -->
+<h1 mat-dialog-title style="text-align:center;">Delete Request</h1>
+<div mat-dialog-content>
+    
+    <div class="row">
+        <div class="col-md-12">
+           <p style="text-align:center;">Are you sure you want to Delete ? </p>
+       </div>
+    </div>
+    <div class="row">
+
+        <div class="col-md-12">
+            <button type="button" class="btn btn-default bg-success pull-right m-3" (click)="deleteForward()">Confirm</button>       
+            <button type="button" class="btn btn-default bg-danger pull-right m-3" mat-dialog-close>Cancel</button>   
+        </div>
+    </div>
+</div>
