--- a/src/app/forward-message/forward-message.component.css
+++ b/src/app/forward-message/forward-message.component.css
@@ -1,5 +1,5 @@
 .forward{
-    margin: 50px 40px !important;
+    margin-top: 50px !important;
 }
 .open{
     border-radius: 2.5rem !important;
@@ -12,9 +12,29 @@
     color: #1d8b4e !important;
     /* border: 2px solid #1d8b4e !important; */
 }
-th,td{
+@media(max-width: 600px) {
+    /* .mobile-label {
+      width: 80px;
+      display: inline-block;
+          font-weight: bold;
+    } */
+  
+    .mat-header-row {
+      display: none;
+    }
+  
+    .mat-row { 
+      flex-direction: column;
+      align-items: center;
+      padding: 8px 44px;
+    }
+  }
+  
+  .mat-table {
+    overflow: auto;
     font-family: 'Montserrat', sans-serif;
-}
+  }
+
 #forward .gap p{
     padding-right: 5px;
 }
