--- a/src/app/city/city.component.html
+++ b/src/app/city/city.component.html
@@ -11,24 +11,24 @@
                                     State</button>
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <h5 class="card-title ">States</h5>
+                                        <h4 class="card-title ">States</h4>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
 
-                    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+                    <mat-table #table [dataSource]="dataSource" class="mat-elevation-z8">
                         <!-- Name Column -->
                         <ng-container matColumnDef="position">
-                            <th mat-header-cell *matHeaderCellDef> No. </th>
-                            <td mat-cell *matCellDef="let row;let i = index;"> {{i+1}} </td>
+                            <mat-header-cell *matHeaderCellDef> No. </mat-header-cell>
+                            <mat-cell *matCellDef="let row;let i = index;"> {{i+1}} </mat-cell>
                         </ng-container>
 
                         <!-- Name Column -->
                         <ng-container matColumnDef="state_name">
-                            <th mat-header-cell *matHeaderCellDef class="card-container"> State Name</th>
-                            <td mat-cell *matCellDef="let row" class="card-container"> {{row.state_name}} </td>
+                            <mat-header-cell *matHeaderCellDef class="card-container"> State Name</mat-header-cell>
+                            <mat-cell *matCellDef="let row" class="card-container"> {{row.state_name}} </mat-cell>
                         </ng-container>
 
                         <!-- Role Column -->
@@ -39,8 +39,8 @@
  -->
 
                         <ng-container matColumnDef="action">
-                            <th mat-header-cell *matHeaderCellDef class="card-container">Actions </th>
-                            <td mat-cell *matCellDef="let row" class="card-container">
+                            <mat-header-cell *matHeaderCellDef class="card-container">Actions </mat-header-cell>
+                            <mat-cell *matCellDef="let row" class="card-container">
                                 <!-- <button mat-raised-button color="primary" (click)="edit_low(row)"> -->
                                 <a (click)="edit_low(row) " style="color:#1d8b4e; cursor:pointer;">
                                     <mat-icon aria-label="Edit">edit</mat-icon>
@@ -55,11 +55,12 @@
                                 <!-- <mat-icon>delete</mat-icon>
                                 </button> -->
                                 <!-- </td> -->
+                                </mat-cell>
                         </ng-container>
 
-                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                    </table>
+                        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+                    </mat-table>
                     <mat-paginator [pageSizeOptions]="[8, 15, 30, 100]" showFirstLastButtons></mat-paginator>
                 </div>
             </div>
