--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -22,7 +22,7 @@
                 </div>
                 <form [formGroup]="signinForm" (ngSubmit)="signin()">
                   <div class="">
-                    <mat-form-field class="example-full-width" style="padding: 0% 11% !important;margin-bottom: 10px;">
+                    <mat-form-field style="padding: 0% 11%;margin-bottom: 10px;">
                       <mat-label>Email</mat-label>
                       <input matInput name="email" [(ngModel)]="email" formControlName="email" required>
                       <mat-error> Email is required</mat-error>
@@ -30,7 +30,7 @@
                   </div>
 
                   <div class="">
-                    <mat-form-field class="example-full-width" style="padding: 0% 11%;">
+                    <mat-form-field style="padding: 0% 11%;">
                       <mat-label>Password</mat-label>
                       <input matInput type="password" name="password" [(ngModel)]="password" 
                         formControlName="password" required>
