--- a/src/app/portal-users/portal-users.component.html
+++ b/src/app/portal-users/portal-users.component.html
@@ -10,61 +10,61 @@
                                     (click)="addUser()">Add New
                                     User</button>
                                 <div class="row">
-                                    <div class="col-md-6">
+                                    <div class="col-md-8">
                                         <h4 class="card-title ">Organization Users</h4>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+                    <mat-table #table [dataSource]="dataSource" class="mat-elevation-z8">
                         <!-- Name Column -->
                         <ng-container matColumnDef="id">
-                            <th mat-header-cell *matHeaderCellDef> Id </th>
-                            <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+                            <mat-header-cell *matHeaderCellDef> Id </mat-header-cell>
+                            <mat-cell *matCellDef="let row"> {{row.id}} </mat-cell>
                         </ng-container>
 
                         <!-- Name Column -->
                         <ng-container matColumnDef="name">
-                            <th mat-header-cell *matHeaderCellDef> Name </th>
-                            <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+                            <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
+                            <mat-cell *matCellDef="let row"> {{row.name}} </mat-cell>
                         </ng-container>
 
                         <!-- Email Column -->
                         <ng-container matColumnDef="email">
-                            <th mat-header-cell *matHeaderCellDef> Email </th>
-                            <td mat-cell *matCellDef="let row"> {{row.email}} </td>
+                            <mat-header-cell *matHeaderCellDef> Email </mat-header-cell>
+                            <mat-cell *matCellDef="let row"> {{row.email}} </mat-cell>
                         </ng-container>
 
                         <!-- Mobile number Column -->
                         <ng-container matColumnDef="mobile">
-                            <th mat-header-cell *matHeaderCellDef> Mobile </th>
-                            <td mat-cell *matCellDef="let row"> {{row.mobile}} </td>
+                            <mat-header-cell *matHeaderCellDef> Mobile </mat-header-cell>
+                            <mat-cell *matCellDef="let row"> {{row.mobile}} </mat-cell>
                         </ng-container>
 
                         <!-- Role Column -->
                         <ng-container matColumnDef="role">
-                            <th mat-header-cell *matHeaderCellDef> Organization </th>
-                            <td mat-cell *matCellDef="let row"> {{row.organization_name}} </td>
+                            <mat-header-cell *matHeaderCellDef> Organization </mat-header-cell>
+                            <mat-cell *matCellDef="let row"> {{row.organization_name}} </mat-cell>
                         </ng-container>
 
                         <!-- Action Column -->
                         <ng-container matColumnDef="action">
-                            <th mat-header-cell *matHeaderCellDef >Actions </th>
-                            <td mat-cell *matCellDef="let row">{{row.action}}
+                            <mat-header-cell *matHeaderCellDef >Actions </mat-header-cell>
+                            <mat-cell *matCellDef="let row">{{row.action}}
                                 <a (click)="edit_low(row) " style="color:#1d8b4e; cursor:pointer;">
                                     <mat-icon aria-label="Edit">edit</mat-icon>
                                 </a>
                                 <a (click)="delete_low(row)" style="color:red; cursor:pointer;">
                                     <mat-icon aria-label="Delete">delete</mat-icon>
                                 </a>
-                                <mat-slide-toggle [checked]="row.status" class="toggle"  [color]="color" (change)="toggle(row,$event)"></mat-slide-toggle>
-                                </td>
+                                <mat-slide-toggle [checked]="row.status" class="toggle"  [color]="primary" (change)="toggle(row,$event)"></mat-slide-toggle>
+                                </mat-cell>
                         </ng-container>
 
-                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                    </table>
+                        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+                    </mat-table>
                     <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" showFirstLastButtons></mat-paginator>
                 </div>
             </div>
