--- a/src/app/send-message/add-organization-dialog.html
+++ b/src/app/send-message/add-organization-dialog.html
@@ -5,7 +5,7 @@
         <form [formGroup]="myForm" (ngSubmit)="saveOrg()">
             <div class="row container">
                 <div class="col-md-12">
-                    <mat-form-field style="padding: 0% 11%;">
+                    <mat-form-field style="padding: 0% 6%;">
                         <mat-label>Organization</mat-label>
                         <mat-select [(value)]="selectedOrgType" formControlName="name"  required>
                           <mat-option *ngFor="let item of name" [value]="item.org_name" >
@@ -18,7 +18,7 @@
             </div>
             <div class="row container">
                 <div class="col-md-12">
-                    <mat-form-field style="padding: 0% 11%;">
+                    <mat-form-field style="padding: 0% 6%;">
                         <mat-label>States</mat-label>
                         <mat-select [(value)]="selectedStates" formControlName="states"  multiple required>
                                 
@@ -34,7 +34,7 @@
             <div class="row container">
                 <div class="col-md-12">
                     
-                        <mat-checkbox color="primary" formControlName="sms" [(ngModel)]="sms">SMS:
+                        <mat-checkbox color="primary" formControlName="sms" [(ngModel)]="sms" style="padding: 0% 6%;">SMS:
                             <div *ngFor="let item of states" style="display: inline-block;">
                             <div *ngIf="selectedOrgType == item.org">
                                 {{item.sms}} users
@@ -47,7 +47,7 @@
             <div class="row container">
                 <div class="col-md-12">
                     
-                        <mat-checkbox color="primary" formControlName="whatsapp" [(ngModel)]="whatsapp">Whatsapp: 
+                        <mat-checkbox color="primary" formControlName="whatsapp" [(ngModel)]="whatsapp" style="padding: 0% 6%;">Whatsapp: 
                             <div *ngFor="let item of states" style="display: inline-block;">
                                 <div *ngIf="selectedOrgType == item.org"> 
                                     {{item.whatsapp}} users
