--- a/src/app/send-message/send-message.component.css
+++ b/src/app/send-message/send-message.component.css
@@ -25,14 +25,20 @@
     mat-form-field{
         background: white;
     }
+
+    .mat-table {
+      overflow: auto;
+      font-family: 'Montserrat', sans-serif;
+    }
+
   .example{
       max-width: 400px;
       max-height: 40px;
-      margin:40px 30px;
+      margin:40px 130px;
   }
   .example-full-width{
-      margin: 30px;
-      max-width: 970px;
+      margin: 30px 60px 30px 125px;
+      max-width: 890px;
       height: 40px;
   }
   .send{
@@ -60,4 +66,27 @@
     padding: 20px;
   }
 
-  
+  @media(max-width:840px){
+    .example{
+      transition: 1s all ease-in;
+      max-width: 400px;
+      max-height: 40px;
+      margin:40px 30px;
+  }
+  .example-full-width{
+    transition: 1s all ease-in;
+    margin: 30px 30px 30px 30px;
+    max-width: 970px;
+    height: 40px;
+  }
+    .mat-header-row {
+      display: flex;
+    }
+  }
+  @media(max-width:500px){
+    .mat-row { 
+      flex-direction: column;
+      align-items: center;
+      padding: 8px 44px;
+    }
+  }
