--- a/src/app/send-message/send-message.component.html
+++ b/src/app/send-message/send-message.component.html
@@ -23,14 +23,14 @@
     
 
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-11">
+        <div class="row justify-content-center">
+            <div class="col-md-10">
                 <div class="card">
                     <div class="card-header card-header-primary">
                         <div class="row">
                             <div class="col-lg-12 col-md-6 ">
                                 <div class="row">
-                                    <div class="col-md-6">
+                                    <div class="col-md-10">
                                         <h4 class="card-title ">Organization details</h4>
                                     </div>
                                 </div>
@@ -38,35 +38,35 @@
                         </div>
                     </div>
                     
-                    <table mat-table [dataSource]="dataSource" class="shadow-lg">
+                    <mat-table #table [dataSource]="dataSource" class="shadow-lg">
                         <!-- Name Column -->
                         <ng-container matColumnDef="position">
-                            <th mat-header-cell *matHeaderCellDef> No. </th>
-                            <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+                            <mat-header-cell *matHeaderCellDef> No. </mat-header-cell>
+                            <mat-cell *matCellDef="let element;"> {{element.position}} </mat-cell>
                         </ng-container>
 
                         <!-- Name Column -->
                         <ng-container matColumnDef="name">
-                            <th mat-header-cell *matHeaderCellDef> Organization Name </th>
-                            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                            <mat-header-cell *matHeaderCellDef> Organization Name </mat-header-cell>
+                            <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
                         </ng-container>
 
                         <!-- Email Column -->
                         <ng-container matColumnDef="states">
-                            <th mat-header-cell *matHeaderCellDef> Selected States </th>
-                            <td mat-cell *matCellDef="let element"> {{element.states}} </td>
+                            <mat-header-cell *matHeaderCellDef> Selected States </mat-header-cell>
+                            <mat-cell *matCellDef="let element"> {{element.states}} </mat-cell>
                         </ng-container>
 
                         <!-- Mobile number Column -->
                         <ng-container matColumnDef="sms">
-                            <th mat-header-cell *matHeaderCellDef> SMS </th>
-                            <td mat-cell *matCellDef="let element"> {{element.sms}} </td>
+                            <mat-header-cell *matHeaderCellDef> SMS </mat-header-cell>
+                            <mat-cell *matCellDef="let element"> {{element.sms}} </mat-cell>
                         </ng-container>
 
                         <!-- Role Column -->
                         <ng-container matColumnDef="whatsapp">
-                            <th mat-header-cell *matHeaderCellDef> WhatsApp </th>
-                            <td mat-cell *matCellDef="let element"> {{element.whatsapp}} </td>
+                            <mat-header-cell *matHeaderCellDef> WhatsApp </mat-header-cell>
+                            <mat-cell *matCellDef="let element"> {{element.whatsapp}} </mat-cell>
                         </ng-container>
 
                         <!-- Action Column -->
@@ -83,9 +83,9 @@
                                 </td>
                         </ng-container> -->
 
-                        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-                    </table>
+                        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+                    </mat-table>
                     <mat-paginator [length]="100"
                     [pageSize]="3" [pageSizeOptions]="[3, 10, 25, 100]" showFirstLastButtons></mat-paginator>
                 
