--- a/src/app/send-message/send-message.component.html
+++ b/src/app/send-message/send-message.component.html
@@ -69,6 +69,14 @@
                             <mat-cell *matCellDef="let element"> {{element.whatsapp}} </mat-cell>
                         </ng-container>
 
+                        <ng-container matColumnDef="action">
+                            <mat-header-cell *matHeaderCellDef  class="card-container">Actions </mat-header-cell>
+                            <mat-cell *matCellDef="let element"  class="card-container">
+                                <a (click)="edit_low(element) " style="color:#1d8b4e; cursor:pointer;">
+                                    <mat-icon aria-label="Edit">edit</mat-icon>
+                                </a>
+                            </mat-cell>
+                        </ng-container>
                         <!-- Action Column -->
                         <!-- <ng-container matColumnDef="action">
                             <th mat-header-cell *matHeaderCellDef >Actions </th>
