sending/create message

--- a/src/app/portal-users/portal-users.component.html
+++ b/src/app/portal-users/portal-users.component.html
@@ -45,7 +45,7 @@
                         <!-- Role Column -->
                         <ng-container matColumnDef="role">
                             <mat-header-cell *matHeaderCellDef> Organization </mat-header-cell>
-                            <mat-cell *matCellDef="let row"> {{row.organization_name}} </mat-cell>
+                            <mat-cell *matCellDef="let row"> {{row.org_name}} </mat-cell>
                         </ng-container>
 
                         <!-- Action Column -->
