--- a/src/app/city/city.component.scss
+++ b/src/app/city/city.component.scss
@@ -2,7 +2,9 @@
   box-shadow: 0 3px 10px 0 rgba(0, 0, 0, 0.5) !important;
   padding-bottom: 10px !important;
 }
-
+.mat-column-position {
+  flex: 0 0 25% !important;
+}
 .asterisk_input:after {
 content: " *";
 color: #e32;
