--- a/src/app/auth/denied-access.html
+++ b/src/app/auth/denied-access.html
@@ -1,8 +1,8 @@
-<div mat-dialog-content>
+<div mat-dialog-content style="width: 250px; height: 150px;">
     <div class="row" style="text-align: center;">
-        <div class="col-md-12">
-                <h4> Your session has expired </h4>
-                    <h4>please login again</h4>
+        <div class="col-md-12" style="margin-bottom: 30px;">
+                <h2> Access Denied </h2>
+                    
        </div>
     </div>
     <div class="row" style="justify-content: center;">
