--- a/src/app/upload-excel/correction.html
+++ b/src/app/upload-excel/correction.html
@@ -1,4 +1,4 @@
-<div class="col-lg-12" style="width: 500px;text-align: center;">
+<div class="col-lg-12" style="width: 500px;max-height: 700px; overflow-y: auto;overflow-x: hidden;text-align: center;">
     <!-- <mat-spinner id="spinner" *ngIf="showSpinner" [diameter]="35" style="margin-left: 130px;"></mat-spinner> -->
     <h2 mat-dialog-title>{{dialogTitle}}</h2>
     <div mat-dialog-content class="cardbox">
